--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <div class="container">
-  <header class="main-header clearfix">
-    <section class="logo">
+  <header class="logo">
+    <header class="logo">
       <h1><a href="#">DemoSite</a></h1>
-    </section>
+    </header>
 
     <nav class="main-menu">
       <ul>
@@ -22,18 +22,12 @@
         <li class="main-menu__item"><a href="#">Contact</a></li>
       </ul>
     </nav>
-  </header>
 
-  <section class="content-area-wrapper clearfix">
     <main class="content-area">
       <h2>Welcome!</h2>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-
-      <p>
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur
+        Content
       </p>
     </main>
 
@@ -48,7 +42,6 @@
         <li>Wow!</li>
       </ul>
     </aside>
-  </section>
 
   <section class="sponsors-wrapper clearfix">
     <h2>Our sponsors</h2>
