structure and content of header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <div class="container">
     <header class="logo">
-
+      <h1><a href="#">DemoSite</a></h1>
     </header>
     
   </div>
