--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       <h1><a href="#">DemoSite</a></h1>
     </header>
     
+    <nav class="main-menu">
+      <ul>
+        <li class="main-menu__item"><a href="#">Our clients</a></li>
+        <li class="main-menu__item"><a href="#">Products</a></li>
+        <li class="main-menu__item"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+
   </div>
 
 
