structure and content of main

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       </ul>
     </nav>
 
+    <main class="content-area">
+      <h2>Welcome!</h2>
+
+      <p>
+        Content
+      </p>
+    </main>
+
   </div>
 
 
