structure and content of aside

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
       </p>
     </main>
 
+    <aside class="sidebar">
+      <h3>Additional stuff</h3>
+
+      <ul>
+        <li>Items</li>
+        <li>Are</li>
+        <li>Listed</li>
+        <li>Here</li>
+        <li>Wow!</li>
+      </ul>
+    </aside>
+
+
+
   </div>
 
 
