structure and content of section sponsor with the pictures of the sponsors

--- a/index.html
+++ b/index.html
@@ -41,7 +41,32 @@
       </ul>
     </aside>
 
+    <section class="sponsors-wrapper">
+      <h2>Our sponsors</h2>
 
+      <section class="sponsors">
+        <figure class="sponsor">
+          <img src="pictures/Sponsor01.jpg">
+        </figure>
+
+        <figure class="sponsor">
+          <img src="pictures/Sponsor02.jpg">
+        </figure>
+        
+        <figure class="sponsor">
+          <img src="pictures/Sponsor03.jpg">
+        </figure>
+
+        <figure class="sponsor">
+          <img src="pictures/Sponsor04.jpg">
+        </figure>
+
+        <figure class="sponsor">
+          <img src="pictures/Sponsor05.jpg">
+        </figure>
+      </section>
+
+    </section>
 
   </div>
 
