structure and content of footer section. The basic structure is finish

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 
     </section>
 
+    <footer class="footer">
+      <p>
+        &copy; 2018 Demosite. White&amp;Sons LLC. All rights (perhaps) reserved.
+      </p>
+    </footer>
   </div>
 
 
