--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/general-styles.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/grid-general.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/header-nav.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/main-aside.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/sponsors.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/footer.css"/>
   <title>Project One: Web Responsive Layout</title>
 </head>
 <body>
