estilos media queries. Responsividad

--- a/index.html
+++ b/index.html
@@ -10,28 +10,56 @@
   <link rel="stylesheet" type="text/css" href="assets/css/main-aside.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/sponsors.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/footer.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/media-queries.css"/>
   <title>Project One: Web Responsive Layout</title>
 </head>
 <body>
   
   <div class="container">
     <header class="logo">
-      <h1><a href="#">DemoSite</a></h1>
+      <h1><a href="#">Cuento Gatitos</a></h1>
     </header>
     
     <nav class="main-menu">
       <ul>
-        <li class="main-menu__item"><a href="#">Our clients</a></li>
-        <li class="main-menu__item"><a href="#">Products</a></li>
-        <li class="main-menu__item"><a href="#">Contact</a></li>
+        <li class="main-menu__item"><a href="#">Clientes</a></li>
+        <li class="main-menu__item"><a href="#">Productos</a></li>
+        <li class="main-menu__item"><a href="#">Contacto</a></li>
       </ul>
     </nav>
 
     <main class="content-area">
-      <h2>Welcome!</h2>
+      <h2>Bienvenidos!</h2>
 
       <p>
-        Content
+        Había una vez tres gatitos que vivían en una caja de cartón en un callejón oscuro y sucio. Se llamaban Luna, Sol y Estrella, y eran hermanos. Su madre los había dejado solos cuando eran muy pequeños, y desde entonces se habían cuidado unos a otros, buscando comida en los contenedores y esquivando a los perros y a las personas malas.
+      </p>
+      <p>
+        Un día, mientras exploraban el barrio, se encontraron con una señora mayor que paseaba a su perrito. La señora se fijó en los gatitos y se acercó a ellos con una sonrisa. Los gatitos se asustaron y se escondieron detrás de la caja, pero la señora les habló con dulzura y les ofreció unas galletas de perro.
+      </p>
+      <p>
+        - No tengáis miedo, pequeños. No os voy a hacer daño. ¿Queréis venir conmigo a mi casa? Tengo un jardín grande y bonito donde podéis jugar y dormir tranquilos. Y también tengo más comida y agua para vosotros.
+      </p>
+      <p>
+        Los gatitos se miraron entre ellos, indecisos. Tenían hambre y frío, y la señora parecía buena, pero también tenían miedo de dejar su caja y de confiar en una extraña.
+      </p>
+      <p>
+        - Vamos, no seáis tímidos. Mi perrito se llama Coco y es muy bueno. Él también os quiere conocer. ¿Verdad, Coco?
+      </p>
+      <p>
+        El perrito movió la cola y ladró suavemente, como si quisiera decir que sí.
+      </p>
+      <p>
+        Los gatitos sintieron curiosidad por el perrito y por la casa de la señora. Decidieron arriesgarse y salir de la caja. La señora los cogió con cuidado y los metió en una cesta que llevaba en el carrito del perrito.
+      </p>
+      <p>
+        - Muy bien, chicos. Ya veréis cómo os va a gustar vivir conmigo. Os voy a dar mucho amor y cariño.
+      </p>
+      <p>
+        La señora los llevó a su casa, que estaba cerca del parque. Allí les dio de comer, les puso unas mantas para que durmieran y les hizo unos juguetes con lana y plumas. Los gatitos se sintieron felices y agradecidos. Pronto se hicieron amigos del perrito Coco, que resultó ser muy simpático y juguetón. También conocieron al marido de la señora, que era un señor mayor muy amable que les hacía cosquillas y les contaba historias.
+      </p>
+      <p>
+        Los gatitos se adaptaron rápidamente a su nuevo hogar. Crecieron sanos y fuertes, y aprendieron a confiar en las personas buenas. Luna, Sol y Estrella nunca olvidaron su pasado difícil, pero tampoco dejaron de disfrutar de su presente feliz. Y así fue como los tres gatitos abandonados en la ciudad encontraron una familia que los quería y los cuidaba para siempre.
       </p>
     </main>
 
@@ -48,7 +76,7 @@
     </aside>
 
     <section class="sponsors-wrapper">
-      <h2>Our sponsors</h2>
+      <h2>Nuestros sponsors</h2>
 
       <section class="sponsors">
         <figure class="sponsor">
@@ -76,7 +104,7 @@
 
     <footer class="footer">
       <p>
-        &copy; 2018 Demosite. White&amp;Sons LLC. All rights (perhaps) reserved.
+        &copy;2023 Cuento Gatitos Demo. Todos los derechos reservados.
       </p>
     </footer>
   </div>
